--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <article class="about-content">
 
                 <div class="about-img">
-                    <img src="images/Profile.jpg" alt="Profilr image">
+                    <img src="Profile.jpg" alt="Profilr image">
 
                     <h3 class="intro">Hi, I am <span>Ajay Solanke</span></h3>
                 </div>
